--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
         <!-- CTA Button -->
         <div class="text-center">
-          <a href="megamartlinks.sa.com/9k84PZvaL/" target="_blank" class="inline-flex items-center justify-center bg-corporate-blue hover:bg-corporate-blue-dark text-white font-semibold px-8 py-3 text-lg rounded-md transition">
+          <a href="https://megamartlinks.sa.com/9k84PZvaL/" target="_blank" class="inline-flex items-center justify-center bg-corporate-blue hover:bg-corporate-blue-dark text-white font-semibold px-8 py-3 text-lg rounded-md transition">
             <i data-lucide="file-text" class="w-5 h-5 mr-2"></i>
             View Bid Document
             <i data-lucide="external-link" class="w-4 h-4 ml-2"></i>
@@ -161,3 +161,4 @@
 </body>
 
 </html>
+
